<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChartActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:titleTextColor="@color/white"
        android:background="@color/color_primary"
        android:theme="@style/Widget.AppCompat.Toolbar"
        app:titleTextAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingTop="20dp"
        android:paddingEnd="10dp"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/chart">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chips_timespan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_timespan_1d"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timespan_30days"
                app:chipBackgroundColor="@color/bg_chip_state_list" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_timespan_1w"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timespan_60days"
                app:chipBackgroundColor="@color/bg_chip_state_list" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_timespan_1m"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timespan_180days"
                app:chipBackgroundColor="@color/bg_chip_state_list" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_timespan_1y"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timespan_1year"
                app:chipBackgroundColor="@color/bg_chip_state_list" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_timespan_2y"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timespan_2years"
                app:chipBackgroundColor="@color/bg_chip_state_list" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_timespan_all"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timespan_all_time"
                app:chipBackgroundColor="@color/bg_chip_state_list" />

        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>